--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Binaries
 cmd/gophermart/main
 cmd/gophermart/gophermart
+cmd/accrual/*
 
 # Dependency directories (remove the comment below to include it)
 vendor/
@@ -21,3 +22,4 @@ vendor/
 # IDEs directories
 .idea
 .vscode
+rest.restbook
